fixed elements being shifted around

--- a/style/blocker.scss
+++ b/style/blocker.scss
@@ -1,9 +1,3 @@
-*,
-::after,
-::before {
-	box-sizing: border-box;
-}
-
 .collapse__button {
 	background-color: hsl(3, 100%, 69%);
 	color: hsl(0, 0%, 100%);
